--- a/src/app/components/movies/movies.component.html
+++ b/src/app/components/movies/movies.component.html
@@ -1,5 +1,11 @@
 <h2>Movies</h2>
 
-<ul *ngFor="let movie of movies">
-  <app-movie [movie]="movie"></app-movie>
+<ul>
+  <li *ngFor="let movie of movies">
+    <app-movie
+      [movie]="movie"
+      [showings]="showings"
+      [cinemas]="cinemas"
+    ></app-movie>
+  </li>
 </ul>
