Change data shape and add getMovieShowings service

--- a/src/app/components/movie/movie.component.html
+++ b/src/app/components/movie/movie.component.html
@@ -5,7 +5,11 @@
   <ul *ngFor="let showing of showings">
     <li>
       <a [routerLink]="['/cinema', showing.cinemaId]">{{ showing.cinemaId }}</a>
-      {{ showing.time }}
+      <ul>
+        <li *ngFor="let time of showing.times">
+          {{ time }}
+        </li>
+      </ul>
     </li>
   </ul>
 </div>
