Create single movie component and cinemaShowing service

--- a/src/app/components/cinema/cinema.component.html
+++ b/src/app/components/cinema/cinema.component.html
@@ -1,3 +1,14 @@
 <div>
   <h3>{{ cinema.name }}</h3>
+  <ul>
+    <li *ngFor="let movieShowing of movieShowings">
+      <p>{{ movieShowing.movie.title }}</p>
+      <span>{{ movieShowing.movie.genre }}</span>
+      <ul>
+        <li *ngFor="let time of movieShowing.times">
+          <span>{{ time }}</span>
+        </li>
+      </ul>
+    </li>
+  </ul>
 </div>
