Render all cinemas to cinemas component

--- a/src/app/components/cinema/cinema.component.html
+++ b/src/app/components/cinema/cinema.component.html
@@ -2,7 +2,9 @@
   <h3>{{ cinema.name }}</h3>
   <ul>
     <li *ngFor="let movieShowing of movieShowings">
-      <p>{{ movieShowing.movie.title }}</p>
+      <a [routerLink]="['/movie', movieShowing.movie.id]">{{
+        movieShowing.movie.title
+      }}</a>
       <span>{{ movieShowing.movie.genre }}</span>
       <ul>
         <li *ngFor="let time of movieShowing.times">
