--- a/src/app/components/cinema/cinema.component.html
+++ b/src/app/components/cinema/cinema.component.html
@@ -1,6 +1,7 @@
 <div>
   <h3>{{ cinema.name }}</h3>
-  <span>Opening Hours: {{ cinema.openingHours }}</span>
+  <p>{{ cinema.location }}</p>
+  <p>Opening Hours: {{ cinema.openingHours }}</p>
   <ul>
     <li *ngFor="let movieShowing of movieShowings">
       <a [routerLink]="['/movie', movieShowing.movie.id]">{{
@@ -14,4 +15,16 @@
       </ul>
     </li>
   </ul>
+  <h3>Update Cinema Details</h3>
+  <form (ngSubmit)="onSubmit()">
+    <div>
+      <label>Name</label>
+      <input type="text" name="name" [(ngModel)]="cinemaName" />
+    </div>
+    <div>
+      <label>Location</label>
+      <input type="text" name="location" [(ngModel)]="cinemaLocation" />
+    </div>
+    <button>Update</button>
+  </form>
 </div>
