Layout styles for home page

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: $space-sm $space-md;
+  padding: $space-sm $space-lg;
   background-color: $color-black;
 
   a {
