--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
-<app-header></app-header>
-<app-navigation></app-navigation>
+<div class="app">
+  <app-header></app-header>
 
-<router-outlet></router-outlet>
+  <div class="container">
+    <router-outlet></router-outlet>
+  </div>
+</div>
