--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,6 @@
 <header class="header">
-  <h1>Cinema Guide</h1>
+  <h1>
+    <a [routerLink]="['/']">Cinema Guide</a>
+  </h1>
   <a href="#">GitHub</a>
 </header>
