--- a/src/app/components/movies/movies.component.html
+++ b/src/app/components/movies/movies.component.html
@@ -1,7 +1,7 @@
 <div class="movies">
   <div class="movies__header">
     <h2>Movies</h2>
-    <a [routerLink]="['/']">Back</a>
+    <a class="back-link" [routerLink]="['/']">&larr; Back</a>
   </div>
   <ul>
     <li
