--- a/src/variables.scss
+++ b/src/variables.scss
@@ -18,6 +18,9 @@ $text-lg: calc(#{$base-size} * #{$scale-ratio} * #{$scale-ratio});
 $text-xl: calc(
   #{$base-size} * #{$scale-ratio} * #{$scale-ratio} * #{$scale-ratio}
 );
+$text-xxl: calc(
+  #{$base-size} * #{$scale-ratio} * #{$scale-ratio} * #{$scale-ratio} * #{$scale-ratio}
+);
 
 // SPACING VARIABLES //
 
