Cinemas page styling

--- a/src/app/components/movie/movie.component.html
+++ b/src/app/components/movie/movie.component.html
@@ -2,7 +2,7 @@
   <div class="movie">
     <div class="movie__image">
       <img
-        src="./../../../assets/images/{{ movie.id }}.jpg"
+        src="./../../../assets/images/movies/{{ movie.id }}.jpg"
         alt="{{ movie.title }}"
       />
     </div>
