--- a/src/app/components/cinemas/cinemas.component.html
+++ b/src/app/components/cinemas/cinemas.component.html
@@ -1,7 +1,18 @@
-<h2>Cinemas</h2>
-
-<ul>
-  <li *ngFor="let cinema of cinemas">
-    <a [routerLink]="['/cinema', cinema.id]">{{ cinema.name }}</a>
-  </li>
-</ul>
+<div class="cinemas">
+  <div class="cinemas__header">
+    <h2>Cinemas</h2>
+    <a class="back-link" [routerLink]="['/']">&larr; Back</a>
+  </div>
+  <ul>
+    <li
+      *ngFor="let cinema of cinemas"
+      [style.backgroundImage]="
+        'url(' + './../../assets/images/cinemas/' + cinema.id + '.jpg' + ')'
+      "
+    >
+      <a [routerLink]="['/cinema', cinema.id]">
+        <span>{{ cinema.name }}</span>
+      </a>
+    </li>
+  </ul>
+</div>
