Navigation page styles

--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -1,8 +1,12 @@
 <ul class="navigation">
-  <li>
-    <a routerLink="/movies">Movies</a>
+  <li class="movies">
+    <a routerLink="/movies">
+      <span>Movies</span>
+    </a>
   </li>
-  <li>
-    <a routerLink="/cinemas">Cinemas</a>
+  <li class="cinemas">
+    <a routerLink="/cinemas">
+      <span>Cinemas</span>
+    </a>
   </li>
 </ul>
