--- a/src/app/components/cinema/cinema.component.scss
+++ b/src/app/components/cinema/cinema.component.scss
@@ -14,6 +14,10 @@
   display: flex;
   flex-direction: column;
 
+  @media only screen and (max-width: $breakpoint-md) {
+    width: 100%;
+  }
+
   &__image {
     display: flex;
     justify-content: center;
@@ -78,6 +82,10 @@
       justify-content: flex-start;
       width: 50%;
       margin-bottom: $space-md;
+
+      @media only screen and (max-width: $breakpoint-md) {
+        width: 100%;
+      }
     }
   }
 }
