--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,10 @@ html {
   font-size: 62.5%;
   box-sizing: border-box;
   background-color: $color-dark-grey;
+
+  @media only screen and (max-width: $breakpoint-sm) {
+    font-size: 45%;
+  }
 }
 
 body {
