--- a/src/app/components/navigation/navigation.component.scss
+++ b/src/app/components/navigation/navigation.component.scss
@@ -2,21 +2,33 @@
 
 .navigation {
   height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  width: 90vw;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 50% 50%;
+
+  @media only screen and (max-width: $breakpoint-sm) {
+    grid-template-columns: 100%;
+  }
 
   li {
-    margin: $space-xl;
+    margin: auto;
+    max-width: 100%;
+    height: 45vw;
   }
 
   li a {
     display: flex;
-    height: 40rem;
-    width: 30rem;
+    width: 35vw;
+    height: 100%;
     justify-content: center;
     align-items: center;
     transition: all 0.2s ease-out;
+
+    @media only screen and (max-width: $breakpoint-sm) {
+      width: 90vw;
+      background-color: rgba(0, 0, 0, 0.6);
+    }
 
     &:hover {
       background-color: rgba(0, 0, 0, 0.6);
@@ -30,6 +42,10 @@
       font-size: $text-xl;
       display: none;
       transition: all 0.2s ease-out;
+
+      @media only screen and (max-width: $breakpoint-sm) {
+        display: block;
+      }
     }
   }
 
@@ -37,11 +53,13 @@
     background-image: url("./../../../assets/images/movies/6.jpg");
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: center;
   }
 
   .cinemas {
     background-image: url("./../../../assets/images/cinemas/1.jpg");
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: center;
   }
 }
