--- a/src/app/components/cinema/cinema.component.scss
+++ b/src/app/components/cinema/cinema.component.scss
@@ -24,7 +24,7 @@
     align-items: stretch;
 
     width: 100%;
-    height: auto;
+    // height: auto;
 
     img {
       width: 100%;
@@ -65,6 +65,7 @@
 
     li a {
       font-size: $text-lg;
+      text-decoration: underline;
 
       &:hover {
         color: $color-light-grey;
@@ -80,7 +81,7 @@
       display: flex;
       flex-direction: column;
       justify-content: flex-start;
-      width: 50%;
+      width: 70%;
       margin-bottom: $space-md;
 
       @media only screen and (max-width: $breakpoint-md) {
