--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,5 +2,5 @@
   <h1>
     <a [routerLink]="['/']">Cinema Guide</a>
   </h1>
-  <a href="#">GitHub</a>
+  <a href="https://github.com/rmar8138/cinema-guide" target="_blank">GitHub</a>
 </header>
