--- a/src/app/components/movie/movie.component.scss
+++ b/src/app/components/movie/movie.component.scss
@@ -94,6 +94,7 @@
 
     li a {
       font-size: $text-lg;
+      text-decoration: underline;
     }
   }
 
@@ -102,8 +103,12 @@
       display: flex;
       flex-direction: column;
       justify-content: flex-start;
-      width: 50%;
+      width: 70%;
       margin-bottom: $space-md;
+
+      @media only screen and (max-width: $breakpoint-md) {
+        width: 100%;
+      }
     }
   }
 }
