--- a/src/app/components/navigation/navigation.component.scss
+++ b/src/app/components/navigation/navigation.component.scss
@@ -26,7 +26,8 @@
     transition: all 0.2s ease-out;
 
     @media only screen and (max-width: $breakpoint-sm) {
-      width: 90vw;
+      width: 75vw;
+      max-width: 100%;
       background-color: rgba(0, 0, 0, 0.6);
     }
 
