Fix text in cinema/movie box hover

--- a/src/app/components/cinemas/cinemas.component.scss
+++ b/src/app/components/cinemas/cinemas.component.scss
@@ -49,7 +49,7 @@
     width: 100%;
     display: flex;
     justify-content: center;
-    align-items: flex-end;
+    align-items: center;
     transition: all 0.2s ease-out;
 
     @media only screen and (max-width: $breakpoint-md) {
@@ -71,6 +71,10 @@
     span {
       display: none;
       transition: all 0.2s ease-out;
+
+      @media only screen and (max-width: $breakpoint-sm) {
+        font-size: $text-xl;
+      }
     }
   }
 }
