--- a/src/app/components/navigation/navigation.component.scss
+++ b/src/app/components/navigation/navigation.component.scss
@@ -15,6 +15,10 @@
     margin: auto;
     max-width: 100%;
     height: 45vw;
+
+    @media only screen and (max-width: $breakpoint-sm) {
+      height: 90%;
+    }
   }
 
   li a {
